--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,9 +1,9 @@
-
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "toastr";
 @import "fullcalendar";
 @import "bootstrap-datepicker/bootstrap-datepicker";
+@import "pages";
 
 .select:before {
   top: 10px !important;
