Refactor code, basic geo search.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 @import "toastr";
 @import "fullcalendar";
 @import "bootstrap-datepicker/bootstrap-datepicker";
-@import "pages";
+@import "properties";
 
 .select:before {
   top: 10px !important;
