--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,54 +1,4 @@
 <div class="row">
-  <div class="search">
-    <%= form_tag root_path, method: :get do %>
-      <%= collection_select('country', 'locale', CS.countries, :first, :last) %>
-      <%= text_field_tag :q, nil, placeholder: "Search by region, city or address", size: 50 %>
-      <%= submit_tag "Search" %>
-      <span class="dropdown">
-        <span class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          More Options
-          <span class="caret"></span>
-        </span>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <div>
-              <h5>PRICE</h5>
-              <%= text_field_tag 'price[min]', nil, placeholder: "Min", size: 5 %>
-              <%= text_field_tag 'price[max]', nil, placeholder: "Max", size: 5 %>
-            </div>
-            <div>
-              <h5>BEDROOMS</h5>
-              <%= text_field_tag 'bedrooms[min]', nil, placeholder: "Min Beds", size: 5 %>
-              <%= text_field_tag 'bedrooms[max]', nil, placeholder: "Max Beds", size: 5 %>
-            </div>
-            <div>
-              <h5>BATHROOMS</h5>
-              <%= text_field_tag 'bathrooms', nil, placeholder: "", size: 5 %>
-              <h5>PARKING</h5>
-              <%= text_field_tag 'parking', nil, placeholder: "", size: 5 %>
-            </div>
-            <div>
-              <h5>PROPERTY TYPE</h5>
-              <%= property_types %>
-            </div>
-          </div>
-        </span>
-      <% end %>
-  </div>
-</div>
-
-<div class="row">
-
-  <div class="col-sm-6">
-    <% @properties.each do |property| %>
-      <img src="http://via.placeholder.com/400x150" alt="" style="padding-top:10px;">
-      <h2><%= property.name.capitalize %></h2>
-      <p><%= property.address %></p>
-      <p><%= property.description %></p>
-      <hr>
-    <% end %>
-  </div>
-  <div class="col-sm-6">
-     <%= tag.div nil, id: 'map', data: { properties: @properties.to_json } %>
-  </div>
-
+  <%= render 'properties/properties_search_bar' %>
+  <%= render 'properties/properties' %>
 </div>
