Geo search with elasticsearch, ajaxify pagination

--- a/app/assets/javascripts/pages.js.erb
+++ b/app/assets/javascripts/pages.js.erb
@@ -11,8 +11,6 @@ $(document).on("turbolinks:load", function() {
   var properties = JSON.parse(document.querySelector("#map").dataset.properties);
   window.properties = properties;
 
-  var bounds = new google.maps.LatLngBounds();
-
   properties.forEach(function (property) {
     if (property.latitude && property.longitude){
         var marker = map.addMarker({
@@ -32,8 +30,27 @@ $(document).on("turbolinks:load", function() {
           `
         }
       });
-      bounds.extend(marker.position);
     }
   });
-  map.fitBounds(bounds);
+
+  var l = document.querySelector("#map").dataset.l;
+  if(l){
+    var latlngs   = l.split(',');
+    var southWest = new google.maps.LatLng(latlngs[0], latlngs[1]);
+    var northEast = new google.maps.LatLng(latlngs[2], latlngs[3]);
+    var bounds    = new google.maps.LatLngBounds(southWest, northEast);
+    map.fitBounds(bounds, 0);
+  }else{
+    map.fitZoom();
+  }
+
+
+  document.querySelector("#redo-search").addEventListener("click", function(e) {
+    e.preventDefault();
+
+    var bounds = map.getBounds();
+    var location = bounds.getSouthWest().toUrlValue() + "," + bounds.getNorthEast().toUrlValue();
+
+    Turbolinks.visit(`/properties?l=${location}`);
+  });
 });
