--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -3,13 +3,10 @@
 </div>
 <div class="row">
   <div class="col-sm-6">
-    <% @properties.each do |property| %>
-      <h1><%= property.name %></h1>
-    <% end %>
+    <%= render partial: "properties_list" %>
   </div>
   <div class="col-sm-6">
-    <%= tag.div nil, id: 'map', data: { properties: @properties.to_json } %>
+    <%= tag.div nil, id: 'map', data: { properties: @properties.to_json, l: params[:l] } %>
+    <%= link_to "Redo search here", "#", id: "redo-search" %>
   </div>
 </div>
-
-<%= paginate @properties %>
