--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -6,7 +6,7 @@
     <%= render partial: "properties_list" %>
   </div>
   <div class="col-sm-6">
-    <%= tag.div nil, id: 'map', data: { properties: @properties.to_json, l: params[:l] } %>
+    <%= tag.div nil, id: 'map' %>
     <%= link_to "Redo search here", "#", id: "redo-search" %>
   </div>
 </div>
