--- a/app/views/properties/_properties_list.html.erb
+++ b/app/views/properties/_properties_list.html.erb
@@ -9,11 +9,11 @@
 
           <div class="listing-badges">
             <span class="featured">Featured</span>
-            <span>For Sale</span>
+            <span>For <%= property.availability.capitalize %></span>
           </div>
 
           <div class="listing-img-content">
-            <span class="listing-price">$275,000 <i>$520 / sq ft</i></span>
+            <span class="listing-price"><%= number_to_currency(property.price, precision: 0) %><i>$520 / sq ft</i></span>
             <span class="like-icon with-tip" data-tip-content="Add to Bookmarks"></span>
             <span class="compare-button with-tip" data-tip-content="Add to Compare"></span>
           </div>
@@ -28,10 +28,12 @@
         <div class="listing-content">
 
           <div class="listing-title">
-            <h4><a href="single-property-page-1.html">Eagle Apartments</a></h4>
+            <h4>
+              <%= link_to property.name.capitalize, ""  %>
+            </h4>
             <a href="https://maps.google.com/maps?q=221B+Baker+Street,+London,+United+Kingdom&hl=en&t=v&hnear=221B+Baker+St,+London+NW1+6XE,+United+Kingdom" class="listing-address popup-gmaps">
               <i class="fa fa-map-marker"></i>
-              9364 School St. Lynchburg, NY
+              <%= property.address %>
             </a>
 
             <a href="single-property-page-1.html" class="details button border">Details</a>
@@ -39,14 +41,14 @@
 
           <ul class="listing-details">
             <li>530 sq ft</li>
-            <li>1 Bedroom</li>
+            <li><%= property.bedrooms %> Bedroom</li>
             <li>3 Rooms</li>
-            <li>1 Bathroom</li>
+            <li><%= property.bathrooms %> Bathroom</li>
           </ul>
 
           <div class="listing-footer">
             <a href="#"><i class="fa fa-user"></i> David Strozier</a>
-            <span><i class="fa fa-calendar-o"></i> 1 day ago</span>
+            <span><i class="fa fa-calendar-o"></i> <%= time_ago_in_words(property.created_at) %> ago</span>
           </div>
 
         </div>
