Fix views, refactor properties controller

--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -14,7 +14,7 @@
 
       <div class="col-md-6">
         <!-- Showing Results -->
-        <p class="showing-results">14 Results Found </p>
+        <p class="showing-results"><%= @properties.total_entries %> Results Found </p>
       </div>
 
       <div class="col-md-6">
