--- a/app/views/properties/_map.html.erb
+++ b/app/views/properties/_map.html.erb
@@ -6,7 +6,11 @@
     <!-- Map Navigation -->
   <a href="#" id="geoLocation" title="Your location"></a>
   <ul id="mapnav-buttons" class="top">
-      <li><a href="#" id="prevpoint" title="Previous point on map">Prev</a></li>
-      <li><a href="#" id="nextpoint" title="Next point on mp">Next</a></li>
+      <li>
+        <%= link_to_prev_page @properties, 'Prev', id: "prevpoint", title: "Previous properties on map" %>
+      </li>
+      <li>
+        <%= link_to_next_page @properties, 'Next', id: "nextpoint", title: "Next properties on map" %>
+      </li>
   </ul>
 </div>
