--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AirKong</title>
+    <title>FindIt</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
 
@@ -20,66 +20,6 @@
 
     <!-- Compare Properties Widget
     ================================================== -->
-    <div class="compare-slide-menu">
-
-    	<div class="csm-trigger"></div>
-
-    	<div class="csm-content">
-    		<h4>Compare Properties <div class="csm-mobile-trigger"></div></h4>
-
-    		<div class="csm-properties">
-
-    			<!-- Property -->
-    			<div class="listing-item compact">
-    				<a href="single-property-page-2.html" class="listing-img-container">
-    					<div class="remove-from-compare"><i class="fa fa-close"></i></div>
-    					<div class="listing-badges">
-    						<span>For Sale</span>
-    					</div>
-    					<div class="listing-img-content">
-    						<span class="listing-compact-title">Eagle Apartments <i>$420,000</i></span>
-    					</div>
-              <%= image_tag "listing-01.jpg" %>
-    				</a>
-    			</div>
-
-    			<!-- Property -->
-    			<div class="listing-item compact">
-    				<a href="single-property-page-2.html" class="listing-img-container">
-    					<div class="remove-from-compare"><i class="fa fa-close"></i></div>
-    					<div class="listing-badges">
-    						<span>For Sale</span>
-    					</div>
-    					<div class="listing-img-content">
-    						<span class="listing-compact-title">Selway Apartments <i>$420,000</i></span>
-    					</div>
-              <%= image_tag "listing-03.jpg" %>
-    				</a>
-    			</div>
-
-    			<!-- Property -->
-    			<div class="listing-item compact">
-    				<a href="single-property-page-2.html" class="listing-img-container">
-    					<div class="remove-from-compare"><i class="fa fa-close"></i></div>
-    					<div class="listing-badges">
-    						<span>For Sale</span>
-    					</div>
-    					<div class="listing-img-content">
-    						<span class="listing-compact-title">Oak Tree Villas <i>$535,000</i></span>
-    					</div>
-              <%= image_tag "listing-05.jpg" %>
-    				</a>
-    			</div>
-
-    		</div>
-
-    		<div class="csm-buttons">
-    			<a href="compare-properties.html" class="button">Compare</a>
-    			<a href="#" class="button reset">Reset</a>
-    		</div>
-    	</div>
-
-    </div>
     <!-- Compare Properties Widget / End -->
 
 
@@ -143,11 +83,7 @@
     			<div class="left-side">
 
     				<!-- Logo -->
-    				<div id="logo">
-              <%= link_to root_path do %>
-      					<%= image_tag "logo.png" %>
-              <% end %>
-    				</div>
+
 
 
     				<!-- Mobile Navigation -->
@@ -164,97 +100,15 @@
     				<nav id="navigation" class="style-1">
     					<ul id="responsive">
 
-    						<li><a class="current" href="#">Home</a>
-    							<ul>
-    								<li><a href="index.html">Home 1</a></li>
-    								<li><a href="index-2.html">Home 2</a></li>
-    								<li><a href="index-3.html">Home 3</a></li>
-    								<li><a href="index-4.html">Home 4</a></li>
-    							</ul>
-    						</li>
+    						<li><a class="current" href="#">Buy</a></li>
 
-    						<li><a href="#">Listings</a>
-    							<ul>
-    								<li><a href="#">List Layout</a>
-    									<ul>
-    										<li><a href="listings-list-with-sidebar.html">With Sidebar</a></li>
-    										<li><a href="listings-list-with-map.html">With Map</a></li>
-    										<li><a href="listings-list-full-width.html">Full Width</a></li>
-    									</ul>
-    								</li>
-    								<li><a href="#">Grid Layout</a>
-    									<ul>
-    										<li><a href="listings-grid-standard-with-sidebar.html">Standard With Sidebar</a></li>
-    										<li><a href="listings-grid-compact-with-sidebar.html">Compact With Sidebar</a></li>
-    										<li><a href="listings-grid-with-map.html">With Map</a></li>
-    										<li><a href="listings-grid-full-width.html">Full Width</a></li>
-    									</ul>
-    								</li>
-    								<li><a href="#">Half Map</a>
-    									<ul>
-    										<li><a href="listings-half-map-list.html">List Layout</a></li>
-    										<li><a href="listings-half-map-grid-standard.html">Grid Standard Layout</a></li>
-    										<li><a href="listings-half-map-grid-compact.html">Grid Compact Layout</a></li>
-    									</ul>
-    								</li>
-    							</ul>
-    						</li>
+    						<li><a href="#">Rent</a></li>
 
-    						<li><a href="#">Features</a>
-    							<ul>
-    								<li><a href="#">Single Properties</a>
-    									<ul>
-    										<li><a href="single-property-page-1.html">Property Style 1</a></li>
-    										<li><a href="single-property-page-2.html">Property Style 2</a></li>
-    										<li><a href="single-property-page-3.html">Property Style 3</a></li>
-    									</ul>
-    								</li>
-    								<li><a href="#">Search Styles</a>
-    									<ul>
-    										<li><a href="index.html">Home Search 1</a></li>
-    										<li><a href="index-2.html">Home Search 2</a></li>
-    										<li><a href="index-3.html">Home Search 3</a></li>
-    										<li><a href="listings-list-full-width.html">Advanced Style</a></li>
-    										<li><a href="listings-list-with-sidebar.html">Sidebar Search</a></li>
-    									</ul>
-    								</li>
-    								<li><a href="#">My Account</a>
-    									<ul>
-    										<li><a href="my-profile.html">My Profile</a></li>
-    										<li><a href="my-bookmarks.html">Bookmarked Listings</a></li>
-    										<li><a href="my-properties.html">My Properties</a></li>
-    										<li><a href="change-password.html">Change Password</a></li>
-    									</ul>
-    								</li>
-    								<li><a href="#">Agencies & Agents</a>
-    									<ul>
-    										<li><a href="agencies-list.html">Agencies List</a></li>
-    										<li><a href="agency-page.html">Agency Page</a></li>
-    										<li><a href="agents-list.html">Agents List</a></li>
-    										<li><a href="agent-page.html">Agent Page</a></li>
-    									</ul>
-    								</li>
-
-    								<li><a href="compare-properties.html">Compare Properties</a></li>
-    								<li><a href="submit-property.html">Submit Property</a></li>
-    							</ul>
-    						</li>
-
-    						<li><a href="#">Pages</a>
-    							<ul>
-    								<li><a href="blog.html">Blog</a>
-    									<ul>
-    										<li><a href="blog.html">Blog</a></li>
-    										<li><a href="blog-post.html">Blog Post</a></li>
-    									</ul>
-    								</li>
-    								<li><a href="contact.html">Contact</a></li>
-    								<li><a href="elements.html">Elements</a></li>
-    								<li><a href="pricing-tables.html">Pricing Tables</a></li>
-    								<li><a href="typography.html">Typography</a></li>
-    								<li><a href="icons.html">Icons</a></li>
-    							</ul>
-    						</li>
+    						<li><a href="#">New homes</a></li>
+                <li><a href="#">Sold</a></li>
+                <li><a href="#">Agents</a></li>
+                <li><a href="#">News & advice</a></li>
+    						<li><a href="#">Classifieds</a></li>
 
     					</ul>
     				</nav>
@@ -268,8 +122,22 @@
     			<div class="right-side">
     				<!-- Header Widget -->
     				<div class="header-widget">
-    					<a href="login-register.html" class="sign-in"><i class="fa fa-user"></i> Log In / Register</a>
-    					<a href="submit-property.html" class="button border">Submit Property</a>
+              <% if user_signed_in? %>
+    					<!-- User Menu -->
+    					<div class="user-menu">
+    						<div class="user-name"><span><%= image_tag "agent-03.jpg" %></span>Hi, <%= current_user.fullname %></div>
+    						<ul>
+    							<li><%= link_to edit_user_registration_path(current_user) do %><i class="sl sl-icon-user"></i> My Profile<% end %></li>
+    							<li><a href="my-bookmarks.html"><i class="sl sl-icon-star"></i> Bookmarks</a></li>
+    							<li><a href="my-properties.html"><i class="sl sl-icon-docs"></i> My Properties</a></li>
+    							<li><a href="index.html"><i class="sl sl-icon-power"></i> Log Out</a></li>
+    						</ul>
+    					</div>
+              <% else %>
+              <%= link_to new_user_session_path do %>
+    					  <i class="fa fa-user"></i> Log In / Register
+              <% end %>
+              <% end %>
     				</div>
     				<!-- Header Widget / End -->
     			</div>
@@ -296,6 +164,7 @@
 
 
     <!-- Footer
+      <div class="margin-top-55"></div>
     ================================================== -->
     <div id="footer" class="sticky-footer">
     	<!-- Main -->
