--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -284,6 +284,7 @@
 					<button class="widget-button with-tip" data-tip-content="Print"><i class="sl sl-icon-printer"></i></button>
 					<button class="widget-button with-tip" data-tip-content="Add to Bookmarks"><i class="fa fa-star-o"></i></button>
 					<button class="widget-button with-tip compare-widget-button" data-tip-content="Add to Compare"><i class="icon-compare"></i></button>
+           <%= favourite_link(@property) %>
 					<div class="clearfix"></div>
 				</div>
 				<!-- Widget / End -->
