Add filter for area

--- a/app/views/properties/_properties_list.html.erb
+++ b/app/views/properties/_properties_list.html.erb
@@ -40,9 +40,8 @@
           </div>
 
           <ul class="listing-details">
-            <li>530 sq ft</li>
+            <li><%= property.area %> sq ft</li>
             <li><%= property.bedrooms %> Bedroom</li>
-            <li>3 Rooms</li>
             <li><%= property.bathrooms %> Bathroom</li>
           </ul>
 
