--- a/app/views/properties/_property_search_side.html.erb
+++ b/app/views/properties/_property_search_side.html.erb
@@ -58,9 +58,8 @@
             <div class="col-fs-3">
 
               <!-- Select Input -->
-              <!-- _TODO <div class="select-input disabled-first-option"> -->
               <div class="select-input disabled-first-option">
-                <%= f.text_field 'area[:min]', placeholder: 'Min Area', data: { unit: 'Sq Ft' } %>
+                <%= f.text_field 'area[min]', value: session[:filters][:area].try(:begin), placeholder: 'Min Area', data: { unit: 'Sq Ft' } %>
                 <select>
                   <option>Min Area</option>
                   <% ((300..1000).step(100).to_a << 1500).each do |option| %>
@@ -77,7 +76,7 @@
 
               <!-- Select Input -->
               <div class="select-input disabled-first-option">
-                <%= f.text_field 'area[:max]', placeholder: 'Max Area', data: { unit: 'Sq Ft' } %>
+                <%= f.text_field 'area[max]', value: session[:filters][:area].try(:end).to_s.tr("Infinity", ""), placeholder: 'Max Area', data: { unit: 'Sq Ft' } %>
                 <select>
                   <option>Max Area</option>
                   <% ((300..1000).step(100).to_a << 1500).each do |option| %>
