--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,30 +31,7 @@
 
 		<!-- Widget -->
 		<div class="col-md-4">
-			<div class="sidebar left">
-
-				<div class="my-account-nav-container">
-					
-					<ul class="my-account-nav">
-						<li class="sub-nav-title">Manage Account</li>
-						<li><a href="my-profile.html" class="current"><i class="sl sl-icon-user"></i> My Profile</a></li>
-						<li><a href="my-bookmarks.html"><i class="sl sl-icon-star"></i> Bookmarked Listings</a></li>
-					</ul>
-					
-					<ul class="my-account-nav">
-						<li class="sub-nav-title">Manage Listings</li>
-						<li><a href="my-properties.html"><i class="sl sl-icon-docs"></i> My Properties</a></li>
-						<li><a href="submit-property.html"><i class="sl sl-icon-action-redo"></i> Submit New Property</a></li>
-					</ul>
-
-					<ul class="my-account-nav">
-						<li><a href="change-password.html"><i class="sl sl-icon-lock"></i> Change Password</a></li>
-						<li><a href="#"><i class="sl sl-icon-power"></i> Log Out</a></li>
-					</ul>
-
-				</div>
-
-			</div>
+			<%= render "shared/sidebar" %>
 		</div>
 
 		<div class="col-md-8">
