Style agencies-list page

--- a/app/views/agencies/index.html.erb
+++ b/app/views/agencies/index.html.erb
@@ -1,29 +1,42 @@
-<div class="row">
-  <div class="col-md-3">
-    <%= render 'agency_setting_sidebar' %>
-  </div>
-  <div class="col-md-9">
-    <div class="panel panel-default">
-      <div class="panel-heading">Agencies</div>
-      <div class="panel-body">
-        <div class="container">
-          <%= link_to "Add Agency", new_agency_path, class: 'btn btn-success' %>
-          <table class="table">
-            <thead>
-            <tr>
-              <th>Name</th>
-              <th>Created at</th>
-            </tr>
-            </thead>
-            <% @agencies.each do |agency| %>
-              <tr>
-                <td><%= agency.name %></td>
-                <td><%= agency.created_at %></td>
-              </tr>
-            <% end %>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
+<!-- Titlebar
+================================================== -->
+<div id="titlebar">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+
+				<h2>Agencies</h2>
+				<span>An award winning agencies</span>
+
+				<!-- Breadcrumbs -->
+				<nav id="breadcrumbs">
+					<ul>
+						<li>
+						  <%= link_to "Home", root_path %>
+						</li>
+						<li>Agencies</li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<!-- Content
+================================================== -->
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+      <%= render @agencies %>
+		</div>
+
+		<div class="col-md-12">
+			<div class="clearfix"></div>
+			<!-- Pagination -->
+			<%= paginate @agencies %>
+			<!-- Pagination / End -->
+		</div>
+
+	</div>
 </div>
