--- a/app/assets/stylesheets/agencies.scss
+++ b/app/assets/stylesheets/agencies.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the agencies controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#search-input{
+  form {
+    width: 100%;
+    input[type="text"]{
+      width: 79%;
+    }
+  }
+}
