--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -1,1 +1,246 @@
-agent homepage
+
+<!-- Titlebar
+================================================== -->
+<div id="titlebar">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+
+				<h2><%= @agent.name %></h2>
+				<span>Agent In <%= @agent.city %></span>
+
+				<!-- Breadcrumbs -->
+				<nav id="breadcrumbs">
+					<ul>
+						<li>
+						  <%= link_to "Home", root_path %>
+						</li>
+						<li>Agent</li>
+					</ul>
+				</nav>
+
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<!-- Content
+================================================== -->
+<div class="container">
+	<div class="row">
+
+		<div class="col-md-12">
+			<div class="agent agent-page">
+
+				<div class="agent-avatar">
+          <%= image_tag @agent.photo %>
+				</div>
+
+				<div class="agent-content">
+					<div class="agent-name">
+						<h4><%= @agent.name %></h4>
+						<span>Agent In <%= @agent.city %></span>
+					</div>
+
+					<p>
+            <%= @agent.description %>
+          </p>
+
+					<ul class="agent-contact-details">
+						<li>
+              <i class="sl sl-icon-call-in"></i>
+              <%= number_to_phone(@agent.phone_number, area_code: true) %>
+            </li>
+						<li>
+              <%= mail_to @agent.email do %>
+                <i class="fa fa-envelope-o "></i>
+                <%= @agent.email %>
+              <% end %>
+            </li>
+					</ul>
+
+					<ul class="social-icons">
+						<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
+						<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
+						<li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
+						<li><a class="linkedin" href="#"><i class="icon-linkedin"></i></a></li>
+					</ul>
+					<div class="clearfix"></div>
+				</div>
+
+			</div>
+		</div>
+
+	</div>
+</div>
+
+
+<!-- Content
+================================================== -->
+<div class="container">
+	<div class="row sticky-wrapper">
+
+		<div class="col-lg-8 col-md-8">
+
+			<h4 class="headline">My Listings</h4>
+
+			<!-- Main Search Input -->
+			<%= render "shared/search_field" %>
+
+			<!-- Sorting / Layout Switcher -->
+			<div class="row margin-bottom-15">
+
+				<div class="col-md-6">
+					<!-- Sort by -->
+					<div class="sort-by">
+						<label>Sort by:</label>
+
+						<div class="sort-by-select">
+							<select data-placeholder="Default order" class="chosen-select-no-single" >
+								<option>Default Order</option>
+								<option>Price Low to High</option>
+								<option>Price High to Low</option>
+								<option>Newest Properties</option>
+								<option>Oldest Properties</option>
+							</select>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<!-- Layout Switcher -->
+					<div class="layout-switcher">
+						<a href="#" class="list"><i class="fa fa-th-list"></i></a>
+						<a href="#" class="grid"><i class="fa fa-th-large"></i></a>
+					</div>
+				</div>
+			</div>
+
+
+			<!-- Listings -->
+			<div class="listings-container list-layout">
+
+        <%= render partial: "properties/property", :collection => @properties, :as => :property %>
+
+			</div>
+			<!-- Listings Container / End -->
+
+
+			<!-- Pagination -->
+				<%= paginate @properties %>
+			<!-- Pagination / End -->
+
+		</div>
+
+
+		<!-- Sidebar -->
+		<div class="col-lg-4 col-md-4">
+			<div class="sidebar sticky right">
+
+        <%= render "search_widget" %>
+
+
+				<!-- Widget -->
+				<div class="widget margin-top-55">
+					<h3 class="margin-bottom-35">Featured Properties</h3>
+
+					<div class="listing-carousel outer">
+						<!-- Item -->
+						<div class="item">
+							<div class="listing-item compact">
+
+								<a href="#" class="listing-img-container">
+
+									<div class="listing-badges">
+										<span class="featured">Featured</span>
+										<span>For Sale</span>
+									</div>
+
+									<div class="listing-img-content">
+										<span class="listing-compact-title">Eagle Apartments <i>$275,000</i></span>
+
+										<ul class="listing-hidden-content">
+											<li>Area <span>530 sq ft</span></li>
+											<li>Rooms <span>3</span></li>
+											<li>Beds <span>1</span></li>
+											<li>Baths <span>1</span></li>
+										</ul>
+									</div>
+
+									<img src="images/listing-01.jpg" alt="">
+								</a>
+
+							</div>
+						</div>
+						<!-- Item / End -->
+
+						<!-- Item -->
+						<div class="item">
+							<div class="listing-item compact">
+
+								<a href="#" class="listing-img-container">
+
+									<div class="listing-badges">
+										<span class="featured">Featured</span>
+										<span>For Sale</span>
+									</div>
+
+									<div class="listing-img-content">
+										<span class="listing-compact-title">Selway Apartments <i>$245,000</i></span>
+
+										<ul class="listing-hidden-content">
+											<li>Area <span>530 sq ft</span></li>
+											<li>Rooms <span>3</span></li>
+											<li>Beds <span>1</span></li>
+											<li>Baths <span>1</span></li>
+										</ul>
+									</div>
+
+									<img src="images/listing-02.jpg" alt="">
+								</a>
+
+							</div>
+						</div>
+						<!-- Item / End -->
+
+						<!-- Item -->
+						<div class="item">
+							<div class="listing-item compact">
+
+								<a href="#" class="listing-img-container">
+
+									<div class="listing-badges">
+										<span class="featured">Featured</span>
+										<span>For Sale</span>
+									</div>
+
+									<div class="listing-img-content">
+										<span class="listing-compact-title">Oak Tree Villas <i>$325,000</i></span>
+
+										<ul class="listing-hidden-content">
+											<li>Area <span>530 sq ft</span></li>
+											<li>Rooms <span>3</span></li>
+											<li>Beds <span>1</span></li>
+											<li>Baths <span>1</span></li>
+										</ul>
+									</div>
+
+									<img src="images/listing-03.jpg" alt="">
+								</a>
+
+							</div>
+						</div>
+						<!-- Item / End -->
+					</div>
+
+				</div>
+				<!-- Widget / End -->
+
+
+			</div>
+		</div>
+		<!-- Sidebar / End -->
+
+	</div>
+</div>
