Add contact form

--- a/app/views/agencies/show.html.erb
+++ b/app/views/agencies/show.html.erb
@@ -132,16 +132,7 @@
 
 				<!-- Widget -->
 				<div class="widget">
-				<h3 class="margin-bottom-30 margin-top-30">Contact Us</h3>
-					<!-- Agent Widget -->
-					<div class="agefnt-widget">
-						<input type="text" placeholder="Your Email" pattern="^[A-Za-z0-9](([_\.\-]?[a-zA-Z0-9]+)*)@([A-Za-z0-9]+)(([\.\-]?[a-zA-Z0-9]+)*)\.([A-Za-z]{2,})$">
-						<input type="text" placeholder="Your Phone">
-						<textarea>Hi, I would like to know if you are able to help me in finding new home.</textarea>
-						<button class="button fullwidth margin-top-5">Send Message</button>
-					</div>
-					<!-- Agent Widget / End -->
-
+					<%= render "contact_form" %>
 				</div>
 				<!-- Widget / End -->
 
