--- a/app/views/agencies/_agency.html.erb
+++ b/app/views/agencies/_agency.html.erb
@@ -31,11 +31,9 @@
       </li>
     </ul>
 
-    <ul class="social-icons">
-      <!-- _TODO add social links to agencies -->
-      <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-      <li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
-    </ul>
+    <!-- social_links -->
+    <%= render partial: "shared/social_link", :collection => agency.social_links, :as => :social_link %>
+
     <div class="clearfix"></div>
   </div>
 
