--- a/app/views/agents/_agent.html.erb
+++ b/app/views/agents/_agent.html.erb
@@ -32,13 +32,9 @@
         </li>
       </ul>
 
-      <ul class="social-icons">
-        <!-- _TODO add social links to agent model -->
-        <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-        <li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-        <li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
-        <li><a class="linkedin" href="#"><i class="icon-linkedin"></i></a></li>
-      </ul>
+      <!-- social_links -->
+      <%= render partial: "shared/social_link", :collection => agent.social_links, :as => :social_link %>
+
       <div class="clearfix"></div>
     </div>
 
