Fix typos, add countries to search form

--- a/app/views/agents/show.html.erb
+++ b/app/views/agents/show.html.erb
@@ -61,7 +61,7 @@
 					</ul>
 
 					<!-- social_links -->
-					<%= render partial: "shared/social_link", :collection => agent.social_links, :as => :social_link %>
+					<%= render partial: "shared/social_link", :collection => @agent.social_links, :as => :social_link %>
 
 					<div class="clearfix"></div>
 				</div>
