--- a/app/views/classified_listings/new.html.erb
+++ b/app/views/classified_listings/new.html.erb
@@ -1,12 +1,14 @@
-<div class="row">
-  <div class="col-md-3">
-    <%= render 'shared/sidebar' %>
-  </div>
-  <div class="col-md-9">
-    <h1>New Classified Listing</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <%= render 'shared/sidebar' %>
+    </div>
+    <div class="col-md-8">
+      <h1>New Classified Listing</h1>
 
-    <%= render 'form', classified_listing: @classified_listing %>
+      <%= render 'form', classified_listing: @classified_listing %>
 
-    <%= link_to 'Back', classified_listings_path %>
+      <%= link_to 'Back', classified_listings_path %>
+    </div>
   </div>
 </div>
