Add step-wise Wizard form for classified-listings

--- a/app/views/classified_listings/_form.html.erb
+++ b/app/views/classified_listings/_form.html.erb
@@ -37,7 +37,9 @@
     <%= link_to_add_association 'Add New Service', form, :services %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+
+
+  <div class="divider">
+    <%= form.submit 'Continue', class: "button preview margin-top-5"%>
   </div>
 <% end %>
