--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -4,7 +4,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h2><i class="fa fa-plus-circle"></i>New Classified Listing</h2>
+				<h2><i class="fa fa-plus-circle"></i>Company Details</h2>
 			</div>
 		</div>
 	</div>
@@ -19,9 +19,9 @@
     </div>
     <div class="col-md-8">
 
-      <%= render 'form', classified_listing: @classified_listing %>
+      <%= render 'form', company: @company %>
 
-      <%= link_to 'Back', classified_listings_path %>
+      <%= link_to 'Back', companies_path %>
     </div>
   </div>
 </div>
