--- a/app/views/list_classifieds/company.html.erb
+++ b/app/views/list_classifieds/company.html.erb
@@ -4,7 +4,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h2><i class="fa fa-plus-circle"></i>New Classified Listing</h2>
+				<h2><i class="fa fa-plus-circle"></i>Company Details</h2>
 			</div>
 		</div>
 	</div>
@@ -18,10 +18,16 @@
       <%= render 'shared/sidebar' %>
     </div>
     <div class="col-md-8">
+			<%= form_for @classified_listing, url: wizard_path, method: :put do |form| %>
 
-      <%= render 'form', classified_listing: @classified_listing %>
+				<h2>Company</h2>
+				<%= form.fields_for :company, @classified_listing.company || Company.new do |f| %>
+						<%= render 'company_fields', f: f %>
+				<% end %>
 
-      <%= link_to 'Back', classified_listings_path %>
+			<% end %>
+
+      <%= link_to 'Back', new_classified_listing_path %>
     </div>
   </div>
 </div>
